--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/andreimititelu/datasphere#readme",
   "dependencies": {
     "moment": "^2.25.0",
+    "redis": "^3.0.2",
     "uuid": "^8.0.0",
     "winston": "^3.2.1"
   },
