--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "moment": "^2.25.0",
     "redis": "^3.0.2",
+    "rsmq": "^0.12.0",
     "uuid": "^8.0.0",
     "winston": "^3.2.1"
   },
