--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.25.0",
     "redis": "^3.0.2",
     "rsmq": "^0.12.0",
+    "rsmq-worker": "^0.5.2",
     "uuid": "^8.0.0",
     "winston": "^3.2.1"
   },
