--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/andreimititelu/datasphere#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "moment": "^2.25.0",
     "redis": "^3.0.2",
     "rsmq": "^0.12.0",
