--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "moment": "^2.25.0",
+    "random": "^2.2.0",
     "redis": "^3.0.2",
     "rsmq": "^0.12.0",
     "rsmq-worker": "^0.5.2",
+    "suggestion": "^2.1.2",
     "uuid": "^8.0.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "youtube-search": "^1.1.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
